// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cardslist component add cardslist click snaphot 1`] = `
<div
  className="cardslist-form col-xs-12"
>
  <div
    className="cardslist-list"
  >
    <div
      className="board-name"
    >
      <span
        onClick={[Function]}
      >
        <h1>
          XML Health
        </h1>
      </span>
    </div>
    <ul
      className="cardslist-list-ul"
    >
      <li
        key="0"
      >
        <div
          className="cardslist-tile"
        >
          <div
            className="update-cardslist"
          >
            <Connect(ReduxForm)
              _id="2skdde39hzdo08aqcdgd"
              board={
                Object {
                  "_id": "46mdujckqs45tkdsh2jdxz",
                  "cardslist": "2skdde39hzdo08aqcdgd",
                  "title": "XML Health",
                }
              }
              boardId="46mdujckqs45tkdsh2jdxz"
              index={0}
            />
            <div>
              <span
                className="glyphicon glyphicon-minus cardslist-delete"
                name="deleteCardslist"
                onClick={[Function]}
              />
            </div>
          </div>
          <div
            className=""
          >
            <Connect(Cards)
              boardId="46mdujckqs45tkdsh2jdxz"
              cardslistId="2skdde39hzdo08aqcdgd"
              key="0"
            />
          </div>
        </div>
      </li>
      <div
        className="create-cardslist"
      >
        <span
          className="createCardslist"
          id="createCardslist"
          name="createCardslist"
          onClick={[Function]}
        >
          Add a list...
        </span>
      </div>
    </ul>
  </div>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className={
      Object {
        "afterOpen": "update-board-after-open",
        "base": "update-board",
        "beforeClose": "update-board-before-close",
      }
    }
    closeTimeoutMS={0}
    contentLabel="Update Board Modal"
    isOpen={false}
    onRequestClose={[Function]}
    overlayClassName={
      Object {
        "afterOpen": "update-board-overlay-after-open",
        "base": "update-board-overlay",
        "beforeClose": "update-board-overlay-before-close",
      }
    }
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <Connect(ReduxForm)
      boardId="46mdujckqs45tkdsh2jdxz"
      boardName="XML Health"
      closeModal={[Function]}
      onSubmit={[Function]}
    />
  </Modal>
</div>
`;

exports[`Cardslist component add cardslist click snaphot 2`] = `
<div
  className="cardslist-form col-xs-12"
>
  <div
    className="cardslist-list"
  >
    <div
      className="board-name"
    >
      <span
        onClick={[Function]}
      >
        <h1>
          XML Health
        </h1>
      </span>
    </div>
    <ul
      className="cardslist-list-ul"
    >
      <li
        key="0"
      >
        <div
          className="cardslist-tile"
        >
          <div
            className="update-cardslist"
          >
            <Connect(ReduxForm)
              _id="2skdde39hzdo08aqcdgd"
              board={
                Object {
                  "_id": "46mdujckqs45tkdsh2jdxz",
                  "cardslist": "2skdde39hzdo08aqcdgd",
                  "title": "XML Health",
                }
              }
              boardId="46mdujckqs45tkdsh2jdxz"
              index={0}
            />
            <div>
              <span
                className="glyphicon glyphicon-minus cardslist-delete"
                name="deleteCardslist"
                onClick={[Function]}
              />
            </div>
          </div>
          <div
            className=""
          >
            <Connect(Cards)
              boardId="46mdujckqs45tkdsh2jdxz"
              cardslistId="2skdde39hzdo08aqcdgd"
              key="0"
            />
          </div>
        </div>
      </li>
      <div
        className="create-cardslist"
      >
        <ReduxForm
          board={
            Object {
              "_id": "46mdujckqs45tkdsh2jdxz",
              "cardslist": "2skdde39hzdo08aqcdgd",
              "title": "XML Health",
            }
          }
          boardId="46mdujckqs45tkdsh2jdxz"
          close={[Function]}
          onSubmit={[Function]}
        />
      </div>
    </ul>
  </div>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className={
      Object {
        "afterOpen": "update-board-after-open",
        "base": "update-board",
        "beforeClose": "update-board-before-close",
      }
    }
    closeTimeoutMS={0}
    contentLabel="Update Board Modal"
    isOpen={false}
    onRequestClose={[Function]}
    overlayClassName={
      Object {
        "afterOpen": "update-board-overlay-after-open",
        "base": "update-board-overlay",
        "beforeClose": "update-board-overlay-before-close",
      }
    }
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <Connect(ReduxForm)
      boardId="46mdujckqs45tkdsh2jdxz"
      boardName="XML Health"
      closeModal={[Function]}
      onSubmit={[Function]}
    />
  </Modal>
</div>
`;

exports[`Cardslist component cardslist snapshot 1`] = `
<div
  className="cardslist-form col-xs-12"
>
  <div
    className="cardslist-list"
  >
    <div
      className="board-name"
    >
      <span
        onClick={[Function]}
      >
        <h1>
          XML Health
        </h1>
      </span>
    </div>
    <ul
      className="cardslist-list-ul"
    >
      <li
        key="0"
      >
        <div
          className="cardslist-tile"
        >
          <div
            className="update-cardslist"
          >
            <Connect(ReduxForm)
              _id="2skdde39hzdo08aqcdgd"
              board={
                Object {
                  "_id": "46mdujckqs45tkdsh2jdxz",
                  "cardslist": "2skdde39hzdo08aqcdgd",
                  "title": "XML Health",
                }
              }
              boardId="46mdujckqs45tkdsh2jdxz"
              index={0}
            />
            <div>
              <span
                className="glyphicon glyphicon-minus cardslist-delete"
                name="deleteCardslist"
                onClick={[Function]}
              />
            </div>
          </div>
          <div
            className=""
          >
            <Connect(Cards)
              boardId="46mdujckqs45tkdsh2jdxz"
              cardslistId="2skdde39hzdo08aqcdgd"
              key="0"
            />
          </div>
        </div>
      </li>
      <div
        className="create-cardslist"
      >
        <span
          className="createCardslist"
          id="createCardslist"
          name="createCardslist"
          onClick={[Function]}
        >
          Add a list...
        </span>
      </div>
    </ul>
  </div>
  <Modal
    ariaHideApp={true}
    bodyOpenClassName="ReactModal__Body--open"
    className={
      Object {
        "afterOpen": "update-board-after-open",
        "base": "update-board",
        "beforeClose": "update-board-before-close",
      }
    }
    closeTimeoutMS={0}
    contentLabel="Update Board Modal"
    isOpen={false}
    onRequestClose={[Function]}
    overlayClassName={
      Object {
        "afterOpen": "update-board-overlay-after-open",
        "base": "update-board-overlay",
        "beforeClose": "update-board-overlay-before-close",
      }
    }
    parentSelector={[Function]}
    portalClassName="ReactModalPortal"
    shouldCloseOnEsc={true}
    shouldCloseOnOverlayClick={true}
    shouldFocusAfterRender={true}
    shouldReturnFocusAfterClose={true}
  >
    <Connect(ReduxForm)
      boardId="46mdujckqs45tkdsh2jdxz"
      boardName="XML Health"
      closeModal={[Function]}
      onSubmit={[Function]}
    />
  </Modal>
</div>
`;
